# pennylane-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  RAILWAY_DEPLOYMENT.md  README.md  pyproject.toml  railway.json
docs/: pennylane-openapi.json
scripts/: generate_tools.py
src/pennylane_mcp/: __init__.py  _metadata.py  _registry.py  client.py  server.py
src/pennylane_mcp/tools/: __init__.py  accounting.py  bank_accounts.py  bank_establishments.py  billing_subscriptions.py  categories.py  category_groups.py  changelogs.py  commercial_documents.py  company_customers.py  customer_invoice_templates.py  customer_invoices.py  customers.py  e_invoices.py  exports.py  file_attachments.py  fiscal_years.py  gocardless_mandates.py  individual_customers.py  invoices.py  journals.py  ledger_accounts.py  ledger_attachments.py  ledger_entries.py  ledger_entry_lines.py  me.py  pa_registrations.py  pro_account.py  products.py  purchase_requests.py  quotes.py  sepa_mandates.py  supplier_invoices.py  suppliers.py  transactions.py  trial_balance.py
