[project]
name = "pennylane-mcp"
version = "0.1.0"
description = "MCP server for Pennylane API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
pennylane-mcp = "pennylane_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"